--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "react-dom": "^16.9.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
-    "react-scroll": "^1.7.14"
+    "react-scroll": "^1.7.14",
+    "react-youtube": "^7.9.0"
   },
   "scripts": {
     "start": "react-scripts start",
