--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "private": true,
   "dependencies": {
     "body-scroll-lock": "^2.6.4",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.1",
+    "classnames": "^2.2.6",
+    "react": "^16.12.0",
+    "react-device-detect": "^1.11.14",
+    "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.2.0",
     "react-scroll": "^1.7.14",
     "react-youtube": "^7.9.0"
   },
